add dummy version implementation / fix palette filter not working without namespace / fix BufferUnderflowException when region, poi or entities file is empty / add some null checks in filters